--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="./imgs/logo jpg.jpg" type="image/x-png" sizes="256x256"  href="icone256.png">
     <title>Cor e arte</title>
 </head>
 <body>
+    <a id="topo" name="topo"></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a href="index.html" class="d-flex align-items-center " >
@@ -20,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto"> <!-- ms-auto para alinhar à direita -->
-                    <a class="nav-link active" href="#">Início</a>
-                    <a class="nav-link" href="#">Produtos</a>
+                    <a class="nav-link active" href="/index.html">Início</a>
+                    <a class="nav-link " href="/podutos.html">Produtos</a>
                     <a class="nav-link" href="#">Contato</a>
                 </div>
             </div>
@@ -29,11 +31,107 @@
     </nav>
     
     <div class="container-landing">
-        <h1>Bem-vindo ao Cor e Arte</h1>
+        <h1>Bem-vindo ao Cor e Arte!<br>10 anos oferecendo qualidade e Praticidade </h1>
         <p>Soluções criativas em acrílico e impressão UV para transformar suas ideias em realidade.</p>
-        <button class="btn btn-primary">Conheça nossos produtos</button>
+        <button onclick="direct()" class="btn btn-primary">Conheça nossos produtos</button>
     </div>
+    <div class="container">
+        <h1 class="text2">Nossos Serviços</h1>
+        <p>Oferecemos uma variedade de serviços para atender às suas necessidades de personalização e design.</p>
+    </div>
+    <div class="cards">
+            <div class="card">
+                <i class="bi bi-scissors"class="card-img-top" alt="Serviço 1"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Corte a laser</h5>
+                    <p class="card-text">Precisão e detalhes incríveis para seus projetos em acrílico.</p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="bi bi-printer" class="card-img-top" alt="Serviço 2"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Gravação UV</h5>
+                    <p class="card-text">Personalização duradoura com alta qualidade em diversos materiais.</p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="bi bi-brush" class="card-img-top" alt="Serviço 3"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Disigner Personalisados</h5>
+                    <p class="card-text">Soluções criativas para destacar seus produtos com elegância.</p>
+                </div>
+            </div>
+        </div>
+    <div class="container2">
+        <h1 class="text3">Porquer Escolher a Cor e Arte</h1>
+        <div class="cards2">
+            <div class="card2">
+                <i class="bi bi-check-circle-fill" alt="Vantagem 1"></i>
+                <h5>Qualidade Superior</h5>
+                <p>Utilizamos materiais de alta qualidade e tecnologia avançada para garantir resultados excepcionais.</p>
+            </div>
+            <div class="card2">
+                <i class="bi bi-people-fill" alt="Vantagem 2"></i>
+                <h5>Atendimento Personalizado</h5>
+                <p>Nossa equipe está pronta para entender suas necessidades e oferecer soluções sob medida.</p>
+            </div>
+            <div class="card2">
+                <i class="bi bi-clock-fill" alt="Vantagem 3"></i>
+                <h5>Entrega Rápida</h5>
+                <p>Comprometidos com prazos, garantimos que seus projetos sejam entregues no tempo certo.</p>
+            </div>
+    </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Coluna de Contato -->
+            <div class="footer-column">
+            <h3 class="footer-title">Contato</h3>
+            <ul class="footer-list">
+                <li><i class="bi bi-telephone"></i> +55 83 99887-4651</li>
+                <li><i class="bi bi-at"></i> @coreartecg</li>
+                <li><i class="bi bi-envelope"></i> contato@corart.com.br</li>
+                <li><i class="bi bi-geo-alt"></i> Campina Grande - PB, Brasil</li>
+                <li><i class="bi bi-clock"></i> Seg-Sex: 8h às 18h</li>
+            </ul>
+            </div>
 
+            <!-- Coluna de Links Rápidos -->
+            <div class="footer-column">
+            <h3 class="footer-title">Links Rápidos</h3>
+            <ul class="footer-list">
+                <li><a href="#" onclick="scrollToTop(event)"><i class="bi bi-house"></i> Início</a></li>
+                <li><a href="/podutos.html"><i class="bi bi-box-seam"></i> Produtos</a></li>
+            </ul>
+            </div>
+
+            <!-- Coluna da Logo e Descrição -->
+            <div class="footer-column logo-column">
+            <div class="logo-container">
+                <img src="/imgs/logo jpg.jpg" alt="COR&ART Logo" class="footer-logo">
+                <h4>Acrílico & Impressão UV</h4>
+            </div>
+            <p class="footer-description">
+                Especialistas em materiais de acrílico e impressão UV de alta qualidade. 
+                Transformamos suas ideias em realidade com precisão e criatividade.
+            </p>
+            <div class="social-icons">
+                <a href="https://wa.me/558398874651" target="_blank" class="social-icon">
+                <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="https://www.instagram.com/coreartcg/" target="_blank" class="social-icon">
+                <i class="bi bi-instagram"></i>
+                </a>
+            </div>
+            </div>
+        </div>
+
+        <!-- Rodapé inferior -->
+        <div class="footer-bottom">
+            <p>© 2025 COR&ART. Todos os direitos reservados. | Desenvolvido com tecnologia Lumi</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./services/index.js"></script>
 </body>
 </html>
