--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/contatos.css">
-    <link rel="icon" href="./imgs/logo jpg.jpg" type="image/x-png" sizes="256x256">
+    <link rel="icon" href="./imgs/logomarca cor eart.png" type="image/x-png" sizes="256x256">
     <title>Contato - Cor e Arte</title>
      <style>
     body.fade-out {
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a href="index.html" class="d-flex align-items-center">
-                <img class="navbar-brand" src="./imgs/logo jpg.jpg" alt="Logo Cor e Arte" width="100" height="100">
+                <img class="navbar-brand" src="./imgs/logomarca cor eart.png" alt="Logo Cor e Arte" width="100" height="100">
             </a>
             <span id="text" class="navbar-brand">Acrílico & Impressão UV</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
@@ -115,7 +115,7 @@
             <!-- Coluna da Logo e Descrição -->
             <div class="footer-column logo-column">
             <div class="logo-container">
-                <img src="/imgs/logo jpg.jpg" alt="COR&ART Logo" class="footer-logo">
+                <img src="./imgs/logomarca cor eart.png" alt="COR&ART Logo" class="footer-logo">
                 <h4>Acrílico & Impressão UV</h4>
             </div>
             <p class="footer-description">
