--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="icon" href="./imgs/logo jpg.jpg" type="image/x-png" sizes="256x256"  href="icone256.png">
+    <link rel="icon" href="./imgs/logomarca cor eart.png" type="image/x-png" sizes="256x256"  href="icone256.png">
     <title>Cor e arte</title>
      <style>
     body.fade-out {
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a href="index.html" class="d-flex align-items-center " >
-                <img class="navbar-brand" src="./imgs/logo jpg.jpg" alt="Logo Cor e Arte" width="100" height="100">
+                <img class="navbar-brand" src="./imgs/logomarca cor eart.png" alt="Logo Cor e Arte" width="100" height="100">
             </a>
             <span id="text"class="navbar-brand">Acrílico & Impressão UV</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
@@ -124,7 +124,7 @@
             <!-- Coluna da Logo e Descrição -->
             <div class="footer-column logo-column">
             <div class="logo-container">
-                <img src="/imgs/logo jpg.jpg" alt="COR&ART Logo" class="footer-logo">
+                <img src="./imgs/logomarca cor eart.png" alt="COR&ART Logo" class="footer-logo">
                 <h4>Acrílico & Impressão UV</h4>
             </div>
             <p class="footer-description">
