novas alterações na tela de produtos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="icon" href="./imgs/logomarca cor eart.png" type="image/x-png" sizes="256x256"  href="icone256.png">
+    <link rel="icon" href="./imgs/icon_corArte-removebg-preview.png" type="image/x-png" sizes="256x256"  href="icone256.png">
     <title>Cor e arte</title>
      <style>
     body.fade-out {
