--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/contatos.css">
-    <link rel="icon" href="./imgs/logomarca cor eart.png" type="image/x-png" sizes="256x256">
+    <link rel="icon" href="./imgs/icon_corArte-removebg-preview.png" type="image/x-png" sizes="256x256">
     <title>Contato - Cor e Arte</title>
      <style>
     body.fade-out {
