--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h3 class="footer-title">Links Rápidos</h3>
             <ul class="footer-list">
                 <li><a href="#" onclick="scrollToTop(event)"><i class="bi bi-house"></i> Início</a></li>
-                <li><a onclick="trasition('podutos.html')"><i class="bi bi-box-seam"></i> Produtos</a></li>
+                <li><a id="a" onclick="trasition('podutos.html')"><i class="bi bi-box-seam"></i> Produtos</a></li>
             </ul>
             </div>
 
