--- a/podutos.html
+++ b/podutos.html
@@ -103,7 +103,7 @@
     <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg", "./imgs/Display_Prisma_21x08cm.jpg",
         "./imgs/Display_Prisma_30x10cm.jpg"]'>
       <div class="product-image">
-        <img src="./imgs/Display_Prisma.jpeg" alt="Display Prisma 21x08cm">
+        <img src="./imgs/Prisma_CHat.png" alt="Display Prisma 21x08cm">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display Prisma em Acrílico p/ Mesa e Buffet | 21x08cm</h3>
@@ -116,7 +116,7 @@
     <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg", "./imgs/Display_Prisma_21x08cm.jpg",
         "./imgs/Display_Prisma_30x10cm.jpg"]'>
       <div class="product-image">
-        <img src="./imgs/Display_Prisma.jpeg" alt="Display Prisma 30x10cm">
+        <img src="./imgs/Prisma_CHat.png" alt="Display Prisma 30x10cm">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display Prisma em Acrílico p/ Mesa e Buffet | 30x10cm</h3>
@@ -130,7 +130,7 @@
     <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
         "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
       <div class="product-image">
-        <img src="./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png" alt="Display Horizontal A6">
+        <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A6">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display Porta Folha de Acrílico Horizontal - Mod. T A6</h3>
@@ -143,7 +143,7 @@
     <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
         "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
       <div class="product-image">
-        <img src="./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png" alt="Display Horizontal A5">
+        <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A5">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display Porta Folha de Acrílico Horizontal - Mod. T A5</h3>
@@ -156,7 +156,7 @@
     <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
         "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
       <div class="product-image">
-        <img src="./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png" alt="Display Horizontal A4">
+        <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A4">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display Porta Folha de Acrílico Horizontal - Mod. T A4</h3>
@@ -171,7 +171,7 @@
         "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
         "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
       <div class="product-image">
-        <img src="./imgs/PArede-Vertical-A6.jpg" alt="Display Parede Vertical A6">
+        <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A6">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display de Parede Vertical em Acrílico A6</h3>
@@ -185,7 +185,7 @@
         "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
         "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
       <div class="product-image">
-        <img src="./imgs/PArede-Vertical-A6.jpg" alt="Display Parede Vertical A5">
+        <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A5">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display de Parede Vertical em Acrílico A5</h3>
@@ -199,7 +199,7 @@
         "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
         "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
       <div class="product-image">
-        <img src="./imgs/PArede-Vertical-A6.jpg" alt="Display Parede Vertical A4">
+        <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A4">
       </div>
       <div class="product-content">
         <h3 class="product-title">Display de Parede Vertical em Acrílico A4</h3>
