--- a/podutos.html
+++ b/podutos.html
@@ -60,8 +60,7 @@
   <div class="products-grid" id="productsGrid">
 
     <!-- ======================= DISPLAY PORTA FOLHA VERTICAL (MOD. L) ======================= -->
-<div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg",
-        "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A6.jpg"]'>
+<div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg" alt="Display Porta Folha A5">
       </div>
@@ -73,8 +72,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg",
-        "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A6.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg" alt="Display Porta Folha A4">
       </div>
@@ -86,8 +84,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg",
-        "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A6.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display Porta Folha de Acrílico Vertical - Mod. L - Tam. A5.jpg" alt="Display Porta Folha A6">
       </div>
@@ -100,8 +97,7 @@
     </div>
 
     <!-- ======================= DISPLAY PRISMA ======================= -->
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg", "./imgs/Display_Prisma_21x08cm.jpg",
-        "./imgs/Display_Prisma_30x10cm.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg", "./imgs/Display_Prisma_21x08cm.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Prisma_CHat.png" alt="Display Prisma 21x08cm">
       </div>
@@ -113,8 +109,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg", "./imgs/Display_Prisma_21x08cm.jpg",
-        "./imgs/Display_Prisma_30x10cm.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display_Prisma.jpeg"]'>
       <div class="product-image">
         <img src="./imgs/Prisma_CHat.png" alt="Display Prisma 30x10cm">
       </div>
@@ -127,8 +122,7 @@
     </div>
 
     <!-- ======================= DISPLAY HORIZONTAL (MOD. T) ======================= -->
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
-        "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png"]'>
       <div class="product-image">
         <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A6">
       </div>
@@ -140,8 +134,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
-        "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png"]'>
       <div class="product-image">
         <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A5">
       </div>
@@ -153,8 +146,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png", "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A5.png",
-        "./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A4.png"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display Porta Folha de Acrílico Horizontal - Mod. T - Tam. A6.png"]'>
       <div class="product-image">
         <img src="./imgs/Porta_FolhasH.png" alt="Display Horizontal A4">
       </div>
@@ -167,9 +159,7 @@
     </div>
 
     <!-- ======================= DISPLAY DE PAREDE ======================= -->
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A6">
       </div>
@@ -181,9 +171,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A5">
       </div>
@@ -195,9 +183,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/PArede-Vertical-A6.jpg"]'>
       <div class="product-image">
         <img src="./imgs/Display_ParedeGPT.png" alt="Display Parede Vertical A4">
       </div>
@@ -210,9 +196,7 @@
     </div>
 
         <!-- ======================= DISPLAY DE PAREDE HORIZONTAL ======================= -->
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg"]'>
     <div class="product-image">
         <img src="./imgs/parede-de-Acrilico-A6.jpg" alt="Display de Parede Horizontal A4">
     </div>
@@ -224,9 +208,7 @@
     </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg"]'>
     <div class="product-image">
         <img src="./imgs/parede-de-Acrilico-A6.jpg" alt="Display de Parede Horizontal A5">
     </div>
@@ -238,9 +220,7 @@
     </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg", "./imgs/parede-de-Acrilico-A5.jpg",
-        "./imgs/parede-de-Acrilico-A4.jpg", "./imgs/PArede-Vertical-A6.jpg", "./imgs/PArede-Vertical-A5.jpg",
-        "./imgs/PArede-Vertical-A4.jpg", "./imgs/Display-ou-porta-folha-L-21.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/parede-de-Acrilico-A6.jpg]'>
     <div class="product-image">
         <img src="./imgs/parede-de-Acrilico-A6.jpg" alt="Display de Parede Horizontal A6">
     </div>
@@ -253,7 +233,7 @@
     </div>
 
         <!-- ======================= DISPLAY PORTA FOLHA VERTICAL ======================= -->
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A5.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A6.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg"]'>
   <div class="product-image">
     <img src="./imgs/Display-ou-porta-folha-L-21.jpg" alt="Display Porta Folha A4">
   </div>
@@ -265,7 +245,7 @@
   </div>
 </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A5.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A6.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg"]'>
     <div class="product-image">
         <img src="./imgs/Display-ou-porta-folha-L-21.jpg" alt="Display Porta Folha A5">
     </div>
@@ -277,7 +257,7 @@
     </div>
     </div>
 
-    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A4.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A5.jpg", "./imgs/Display Porta Folha de Acrílico Vertical A6.jpg"]'>
+    <div class="product-card" data-category="acrilico display" data-images='["./imgs/Display-ou-porta-folha-L-21.jpg"]'>
     <div class="product-image">
         <img src="./imgs/Display-ou-porta-folha-L-21.jpg" alt="Display Porta Folha A6">
     </div>
@@ -291,7 +271,7 @@
 
    <!--======================== TROFÉUS ======================-->
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu1.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.09 (1).jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.09 (1).jpeg" alt="Troféu Campeão">
         </div>
@@ -303,7 +283,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu2.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.09.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.09.jpeg" alt="Troféu Participação">
         </div>
@@ -315,7 +295,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu3.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.23.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.23.jpeg" alt="Troféu Destaque">
         </div>
@@ -327,7 +307,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu4.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.31.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.31.jpeg" alt="Troféu Excelência">
         </div>
@@ -339,7 +319,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu5.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.32.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.32.jpeg" alt="Troféu Liderança">
         </div>
@@ -351,7 +331,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu6.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.33 (1).jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.33 (1).jpeg" alt="Troféu Participação Infantil">
         </div>
@@ -363,7 +343,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu7.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.33.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.33.jpeg" alt="Troféu Criatividade">
         </div>
@@ -375,7 +355,7 @@
         </div>
     </div>
 
-    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/trofeu8.jpeg"]'>
+    <div class="product-card" data-category="acrilico trofeus" data-images='["./imgs/WhatsApp Image 2025-09-11 at 15.26.34.jpeg"]'>
         <div class="product-image">
             <img src="./imgs/WhatsApp Image 2025-09-11 at 15.26.34.jpeg" alt="Troféu Mérito">
         </div>
